save recent buffers in redis, for replay on connect

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-grip==1.7.0
 gripcontrol==2.4.2
 pubcontrol==2.2.7
 pyzmq==16.0.2
+redis==2.10.5
 requests==2.13.0
 tnetstring==0.2.1
 wsgiref==0.1.2
